--- a/WebContent/views/adminProfile.view.html
+++ b/WebContent/views/adminProfile.view.html
@@ -39,6 +39,6 @@
             <button type="submit" class="btn btn-default btn-primary btn-block" ng-click="model.update()">Update</button>
         </div>
     </div>
-   <!-- <div ng-show="model.updateMessage" class="alert alert-success" role="alert">{{model.updateMessage}}</div>
-    <div ng-show="model.updateErrorMessage" class="alert alert-danger" role="alert">{{model.updateErrorMessage}}</div>-->
+   <div ng-show="model.isUpdateSuccessful" class="alert alert-success" role="alert">Profile update successfully.</div>
+    <div ng-show="model.isUpdateFailed" class="alert alert-danger" role="alert">Failed to update profile. Please check the information entered above.</div>
 </div>
