--- a/WebContent/views/location.view.html
+++ b/WebContent/views/location.view.html
@@ -111,9 +111,10 @@ Licensed under MIT
         <thead>
         <tr>
             <th> Location Name</th>
-            <th> Description</th>
-            <th> Keywords</th>
-            <th> Email</th>
+            <th> City</th>
+            <th> State</th>
+            <th> Phone Number</th>
+            <th> Location Code</th>
             <th> Actions</th>
         </tr>
      
@@ -121,10 +122,11 @@ Licensed under MIT
         <tbody>
         <tr ng-repeat = "loc in model.locationSearchResults">
             <td><a href=""> {{loc.locationName}} </a></td>
-            <td> {{loc.locationDescription}} </td>
-            <td> {{loc.locationKeywords}} </td>
+            <td> {{loc.locationCity}} </td>
+            <td> {{loc.locationState}} </td>
+            <td> {{loc.locationPhoneNumber}} </td>
+            <td> {{loc.locationCode}} </td>
             
-            <td> {{loc.locationEmail}} </td>
             <td>
                 <a href=""><span class="glyphicon glyphicon-pencil incrsize" data-toggle="modal"
                                                  data-target="#myModal" ng-click="model.selectLocation($index)"></span></a>
@@ -261,12 +263,15 @@ Licensed under MIT
                 </div>
                 <div class="modal-body">
                    <div class="form-horizontal" ng-form name="locationUpdateForm">
-                                <div class="form-group">
+                                <div class="form-group required">
                                     <label for="inputName2" class="col-sm-2 control-label">Location Name:</label>
                                     <div class="col-sm-7">
                                         <input type="text" class="form-control" id="inputName2" placeholder="Name of the location" ng-model="model.locationUpdate.name">
                                     </div>
                                 </div>
+                                
+                              
+                                
                                 <div class="form-group">
                                     <label for="inputName3" class="col-sm-2 control-label">Description:</label>
                                     <div class="col-sm-7">
@@ -280,7 +285,7 @@ Licensed under MIT
                                     </div>
                                 </div>
 
-                                <div class="form-group">
+                                <div class="form-group required">
                                     <label for="inputEmail3" class="col-sm-2 control-label">Address Line 1:</label>
                                     <div class="col-sm-7">
                                         <input type="text" class="form-control" id="inputEmail3" placeholder="Address" ng-model="model.locationUpdate.address1">
@@ -294,41 +299,41 @@ Licensed under MIT
                                     </div>
                                 </div>
 
-                                <div class="form-group">
+                                <div class="form-group required">
                                     <label for="inputEmail3" class="col-sm-2 control-label">City:</label>
                                     <div class="col-sm-7">
                                         <input type="text" class="form-control" id="inputEmail3" placeholder="City" ng-model="model.locationUpdate.city">
                                     </div>
                                 </div>
 
-                                <div class="form-group">
+                                <div class="form-group required">
                                     <label for="inputEmail3" class="col-sm-2 control-label">State:</label>
                                     <div class="col-sm-7">
            
-                                        <select name="states" ng-options='state.fieldId as state.fieldValue for state in model.statesList.results' class="form-control" id="inputEmail3" placeholder="State" ng-model="model.locationUpdate.state" required="required">
+                                        <select ng-init=model.locationUpdate.state name="states" ng-options='state.fieldId as state.fieldValue for state in model.statesList.results' class="form-control" id="inputEmail3"  ng-model="model.locationUpdate.state" required="required">
                                         <option value="">Select State</option>
                                         </select>
                                     </div>
                                 </div>
 
-                                <div class="form-group">
+                                <div class="form-group required">
                                     <label for="inputEmail3" class="col-sm-2 control-label">Zipcode:</label>
                                     <div class="col-sm-7">
-                                        <input type="text" class="form-control" id="inputEmail3" placeholder="Zipcode" ng-model="model.locationUpdate.zipcode">
+                                        <input type="text" class="form-control" id="inputEmail3" placeholder="Zipcode" ng-model="model.locationUpdate.zipCode">
                                     </div>
                                 </div>
 
-                                <div class="form-group">
+                                <div class="form-group required">
                                     <label for="inputEmail3" class="col-sm-2 control-label">Phone number:</label>
                                     <div class="col-sm-7">
-                                        <input type="number" max="10" class="form-control" id="inputEmail3" placeholder="Phone Number" ng-model="model.locationUpdate.phoneNo" required="required">
+                                        <input type="text" max="10" class="form-control" id="inputEmail3" placeholder="Phone Number" ng-model="model.locationUpdate.phoneNo" required="required">
                                     </div>
                                 </div>
 
                                 <div class="form-group">
                                     <label for="inputEmail3" class="col-sm-2 control-label">Fax number:</label>
                                     <div class="col-sm-7">
-                                        <input type="number" max="10" class="form-control" id="inputEmail3" placeholder="Fax Number" ng-model="model.locationUpdate.faxNo">
+                                        <input type="text" max="10" class="form-control" id="inputEmail3" placeholder="Fax Number" ng-model="model.locationUpdate.faxNo">
                                     </div>
                                 </div>
 
@@ -351,7 +356,7 @@ Licensed under MIT
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="button" ng-click="model.update(model.selectedField)" class="btn btn-default" data-dismiss="modal">Ok</button>
+             
                 </div>
             </div>
         </div>
