--- a/WebContent/views/location.view.html
+++ b/WebContent/views/location.view.html
@@ -179,7 +179,7 @@ Licensed under MIT
                                     <div class="col-sm-7">
                                         <input type="text" name="createLocationCode" class="form-control" id="inputEmail3" ng-pattern="/^[a-z0-9]{6}$/i" placeholder="Location Code" ng-model="model.newLocation.code" ng-change="model.checkDuplicate('locationCode', model.newLocation.code)" required="required">
                                         <div ng-messages="model.locationCreateForm.createLocationCode.$error" style="color:maroon">
-									       	<div ng-message="pattern">Must be a 6 chars long. Can be alphanumeric.</div>
+									       	<div ng-message="pattern">Must be 6 chars long. Can be alphanumeric.</div>
 									        <div ng-message="locationCodeError">The location code already exists. Please enter another code.</div>
 									        <div ng-message="required">This field is required.</div>
 									    </div>
@@ -270,7 +270,7 @@ Licensed under MIT
 
                                 <div class="form-group">
                                     <div class="col-sm-offset-2 col-sm-7">
-                                        <button type="submit" class="btn btn-default btn-primary btn-block" ng-click="model.create(model.newLocation)">Create</button>
+                                        <button type="submit" class="btn btn-default btn-primary btn-block" ng-click="model.create(model.newLocation)" ng-disabled="model.locationCreateForm.$invalid">Create</button>
                                     </div>
                                 </div>
                                  <div ng-show="model.isCreateSuccessful" class="alert alert-success" role="alert">Location created successfully.</div>
