imageManagement(needs some adjustnment in the tabs )

--- a/WebContent/views/navigation.view.html
+++ b/WebContent/views/navigation.view.html
@@ -44,7 +44,7 @@
                 <a href="#/targetgroup"><i class="fa fa-users"></i> Target Groups </a>
             </li>
             <li ng-class="{'active' : model.$location.url() =='/imageManagement'}">
-                <a href=""><i class="fa fa-picture-o"></i> Image Management </a>
+                <a href="#/imageManagement"><i class="fa fa-picture-o"></i> Image Management </a>
             </li>
             <li ng-class="{'active' : model.$location.url() =='/questionManagement'}">
                 <a href="#/questionManagement"><i class="fa fa-question-circle"></i> Question Management </a>
