--- a/WebContent/views/imageManagement.view.html
+++ b/WebContent/views/imageManagement.view.html
@@ -1,10 +1,288 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <h3>Images Management</h3>
 
-</body>
-</html>
+            <div class="tabbable-panel">
+                <div class="tabbable-line">
+                    <ul class="nav nav-tabs">
+                        <li ng-class="{active:model.isSet('imageCatergories')}">
+                            <a href="" ng-click="model.setTab('imageCatergories')">
+                                images Categories </a>
+                        </li>
+                        <li ng-class="{active:model.isSet('images')}">
+                            <a href="" ng-click="model.setTab('images')">
+                                images </a>
+                        </li>
+
+                    </ul>
+                    <div class="tab-content">
+                    <!-- Tab content for image categories begins here -->
+		                  <div class="tabbable-panel" ng-show="model.isSet('imageCatergories')">
+		                	<div class="tabbable-line">
+		                    <ul class="nav nav-tabs">
+		                    	<li ng-class="{active:model.isSet('SearchImageCatergories')}">
+		                            <a href="" ng-click="model.setSubTab('SearchImageCatergories')">
+		                                Search </a>
+		                        </li>
+		                        <li ng-class="{active:model.isSet('createImageCategories')}">
+		                            <a href="" ng-click="model.setSubTab('createImageCategories')">
+		                                Create </a>
+		                        </li>
+		                    
+		                       </ul>
+                        <div class="tab-pane active" id="tab_default_1" ng-show="model.isSetSubTab('SearchImageCatergories')">
+                            <div class="form-horizontal">
+                                <div class="form-group">
+                                    <label for="inputName2" class="col-sm-2 control-label">Category Name:</label>
+                                    <div class="col-sm-7">
+                                        <input type="text" class="form-control" id="inputName2" placeholder="Name of the location" ng-model="model.searchLoc.name">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="inputName3" class="col-sm-2 control-label">Description:</label>
+                                    <div class="col-sm-7">
+                                        <input type="text" class="form-control" id="inputName3" placeholder="Description of the location" ng-model="model.searchLoc.description">
+                                    </div>
+                                </div>
+
+                                <div class="form-group">
+                                    <div class="col-sm-offset-2 col-sm-7">
+                                        <button type="submit" class="btn btn-default btn-primary btn-block" ng-click="model.search(model.search)">Search</button>
+                                    </div>
+                                </div>
+                                <!-- <div ng-show="model.updateMessage" class="alert alert-success" role="alert">{{model.updateMessage}}</div>
+                                 <div ng-show="model.updateErrorMessage" class="alert alert-danger" role="alert">{{model.updateErrorMessage}}</div>-->
+                            </div>
+							<div>
+           		<h4>Search Results</h4>
+           		<div class="table-responsive" id="formtable">
+    <table class="table table-striped table-bordered">
+        <thead>
+        <tr>
+            <th> Category Name</th>
+            <th> Description</th>
+            <th> images</th>
+            <th> </th>
+        </tr>
+     
+        </thead>
+        <tbody>
+        <tr>
+            <td><a href=""> Test Category </a></td>
+            <td> Testing </td>
+            <td> Testing </td>
+           
+            <td>
+                <a href=""><span class="glyphicon glyphicon-pencil incrsize" data-toggle="modal"
+                                                 data-target="#myModal"></span></a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+           </div> 
+
+                        </div>
+                        <div class="tab-pane active" id="tab_default_2" ng-show="model.isSetSubTab('createImageCategories')">
+                            <div class="form-horizontal" ng-form name="locationCreateForm">
+                               
+                                <div class="form-group required">
+                                    <label for="inputEmail3" class="col-sm-2 control-label">Category Name:</label>
+                                    <div class="col-sm-7">
+                                        <input type="text" name="createLocationCode" class="form-control" id="inputEmail3" placeholder="Location Code" ng-model="model.newLocation.code">
+                                        <div ng-messages="locationCreateForm.createLocationCode.$error">
+									       
+									        <div ng-message-exp="model.isLocationCodeDuplicate">The location code already exists. Please enter another code.</div>
+									      
+									    </div>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="inputName3" class="col-sm-2 control-label">Description:</label>
+                                    <div class="col-sm-7">
+                                        <input type="text" class="form-control" id="inputName3" placeholder="Description of the location" ng-model="model.newLocation.description">
+                                    </div>
+                                </div>
+               
+
+                                <div class="form-group">
+                                    <div class="col-sm-offset-2 col-sm-7">
+                                        <button type="submit" class="btn btn-default btn-primary btn-block" ng-click="model.create(model.newLocation)">Create</button>
+                                    </div>
+                                </div>
+                                <!-- <div ng-show="model.updateMessage" class="alert alert-success" role="alert">{{model.updateMessage}}</div>
+                                 <div ng-show="model.updateErrorMessage" class="alert alert-danger" role="alert">{{model.updateErrorMessage}}</div>-->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Tab content for images begins here -->
+                	                  <div class="tabbable-panel" ng-show="model.isSet('images')">
+		                	<div class="tabbable-line">
+		                    <ul class="nav nav-tabs">
+		                    	<li ng-class="{active:model.isSet('searchImages')}">
+		                            <a href="" ng-click="model.setSubTab('searchImages')">
+		                                Search </a>
+		                        </li>
+		                        <li ng-class="{active:model.isSet('createImages')}">
+		                            <a href="" ng-click="model.setSubTab('createImages')">
+		                                Create </a>
+		                        </li>
+		                    
+		                       </ul>
+                        <div class="tab-pane active" id="tab_default_1" ng-show="model.isSetSubTab('searchImages')">
+                            <div class="form-horizontal">
+                                <div class="form-group">
+                                    <label for="inputName2" class="col-sm-2 control-label">image Name:</label>
+                                    <div class="col-sm-7">
+                                        <input type="text" class="form-control" id="inputName2" placeholder="Name of the location" ng-model="model.searchLoc.name">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="inputName3" class="col-sm-2 control-label">Description:</label>
+                                    <div class="col-sm-7">
+                                        <input type="text" class="form-control" id="inputName3" placeholder="Description of the location" ng-model="model.searchLoc.description">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="inputEmail3" class="col-sm-2 control-label">image Category:</label>
+                                    <div class="col-sm-7">                                     
+                                        <select name="states" class="form-control" id="inputEmail3" placeholder="State" ng-model="model.searchLoc.state" required="required">
+                                        <option value="">Select Category</option>
+                                        </select>
+                                    </div>
+                                </div>
+
+                                <div class="form-group">
+                                    <div class="col-sm-offset-2 col-sm-7">
+                                        <button type="submit" class="btn btn-default btn-primary btn-block" ng-click="model.search(model.search)">Search</button>
+                                    </div>
+                                </div>
+                                <!-- <div ng-show="model.updateMessage" class="alert alert-success" role="alert">{{model.updateMessage}}</div>
+                                 <div ng-show="model.updateErrorMessage" class="alert alert-danger" role="alert">{{model.updateErrorMessage}}</div>-->
+                            </div>
+							<div>
+           		<h4>Search Results</h4>
+           		<div class="table-responsive" id="formtable">
+    <table class="table table-striped table-bordered">
+        <thead>
+        <tr>
+            <th> image Name</th>
+            <th> Description</th>
+            <th> image Category</th>
+            <th> </th>
+        </tr>
+     
+        </thead>
+        <tbody>
+        <tr>
+            <td><a href=""> Test image </a></td>
+            <td> Testing </td>
+            <td> Testing </td>
+           
+            <td>
+                <a href=""><span class="glyphicon glyphicon-pencil incrsize" data-toggle="modal"
+                                                 data-target="#myModal"></span></a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+           </div> 
+
+                        </div>
+                        <div class="tab-pane active" id="tab_default_2" ng-show="model.isSetSubTab('createImages')">
+                            <div class="form-horizontal" ng-form name="locationCreateForm">
+                               
+                                <div class="form-group required">
+                                    <label for="inputEmail3" class="col-sm-2 control-label">images Name:</label>
+                                    <div class="col-sm-7">
+                                        <input type="text" name="createLocationCode" class="form-control" id="inputEmail3" placeholder="Location Code" ng-model="model.newLocation.code">
+                                        <div ng-messages="locationCreateForm.createLocationCode.$error">
+									       
+									        <div ng-message-exp="model.isLocationCodeDuplicate">The location code already exists. Please enter another code.</div>
+									      
+									    </div>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="inputName3" class="col-sm-2 control-label">Description:</label>
+                                    <div class="col-sm-7">
+                                        <input type="text" class="form-control" id="inputName3" placeholder="Description of the location" ng-model="model.newLocation.description">
+                                    </div>
+                                </div>
+                                
+                                <div class="form-group">
+                                    <label for="inputEmail3" class="col-sm-2 control-label">images Category:</label>
+                                    <div class="col-sm-7">                                     
+                                        <select name="states" class="form-control" id="inputEmail3" placeholder="State" ng-model="model.searchLoc.state" required="required">
+                                        <option value="">Select Category</option>
+                                        </select>
+                                    </div>
+                                </div>
+               
+
+                                <div class="form-group">
+                                    <div class="col-sm-offset-2 col-sm-7">
+                                        <button type="submit" class="btn btn-default btn-primary btn-block" ng-click="model.create(model.newLocation)">Create</button>
+                                    </div>
+                                </div>
+                                <!-- <div ng-show="model.updateMessage" class="alert alert-success" role="alert">{{model.updateMessage}}</div>
+                                 <div ng-show="model.updateErrorMessage" class="alert alert-danger" role="alert">{{model.updateErrorMessage}}</div>-->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+           
+
+        </div>
+    </div>
+    <!-- Modal view content -->
+       <div id="myModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Edit images Category</h4>
+                </div>
+                <div class="modal-body">
+                   <div class="form-horizontal" ng-form name="locationUpdateForm">
+                                <div class="form-group">
+                                    <label for="inputName2" class="col-sm-2 control-label">Category Name:</label>
+                                    <div class="col-sm-7">
+                                        <input type="text" class="form-control" id="inputName2" placeholder="Name of the location" ng-model="model.locationUpdate.name">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="inputName3" class="col-sm-2 control-label">Description:</label>
+                                    <div class="col-sm-7">
+                                        <input type="text" class="form-control" id="inputName3" placeholder="Description of the location" ng-model="model.locationUpdate.description">
+                                    </div>
+                                </div>
+                        
+
+                                <div class="form-group">
+                                    <div class="col-sm-offset-2 col-sm-7">
+                                        <button type="submit" class="btn btn-default btn-primary btn-block" ng-click="model.update(model.locationUpdate)">Update</button>
+                                    </div>
+                                </div>
+                                <!-- <div ng-show="model.updateMessage" class="alert alert-success" role="alert">{{model.updateMessage}}</div>
+                                 <div ng-show="model.updateErrorMessage" class="alert alert-danger" role="alert">{{model.updateErrorMessage}}</div>-->
+                            </div>
+                    
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="button" ng-click="model.update(model.selectedField)" class="btn btn-default" data-dismiss="modal">Ok</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+</div>
